// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and four - small 1`] = `
Array [
  <div
    className="css-text-901oao"
  >
    lead
  </div>,
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-text-901oao"
    >
      support-1
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      support-2
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      support-3
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      support-4
    </div>
  </div>,
]
`;

exports[`2. lead one and four - medium 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "20px",
      "marginRight": "20px",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "5px",
      "paddingTop": "5px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      lead
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      support-1
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      support-2
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      support-3
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      support-4
    </div>
  </div>
</div>
`;
